--- a/src/globals.css
+++ b/src/globals.css
@@ -1,76 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600&display=swap');
+@import "./assets/styles/lenis-requirement.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --primary-50: 252 253 232;
+    --primary-100: 247 251 204;
+    --primary-200: 236 247 159;
+    --primary-300: 217 237 93;
+    --primary-400: 200 225 58;
+    --primary-500: 170 199 27;
+    --primary-600: 132 159 17;
+    --primary-700: 100 121 18;
+    --primary-800: 80 96 20;
+    --primary-900: 67 81 22;
+    --primary-950: 35 45 6;
 
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
- 
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
- 
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
- 
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
- 
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --secondary-50: 243 244 251;
+    --secondary-100: 227 230 246;
+    --secondary-200: 205 212 240;
+    --secondary-300: 170 182 230;
+    --secondary-400: 130 146 216;
+    --secondary-500: 100 112 205;
+    --secondary-600: 80 86 192;
+    --secondary-700: 70 70 175;
+    --secondary-800: 64 62 143;
+    --secondary-900: 55 54 114;
+    --secondary-950: 37 36 71;
 
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
- 
-    --radius: 0.5rem;
+    --ebony-50: 240 244 253;
+    --ebony-100: 227 235 252;
+    --ebony-200: 204 216 249;
+    --ebony-300: 173 189 244;
+    --ebony-400: 140 155 237;
+    --ebony-500: 112 121 228;
+    --ebony-600: 85 86 214;
+    --ebony-700: 70 69 189;
+    --ebony-800: 59 60 152;
+    --ebony-900: 54 56 121;
+    --ebony-950: 12 12 27;
+
+    --flower-50: 237 239 255;
+    --flower-100: 223 224 255;
+    --flower-200: 197 199 255;
+    --flower-300: [168 168 255];
+    --flower-400: 135 125 252;
+    --flower-500: 117 94 246;
+    --flower-600: 103 65 234;
+    --flower-700: 90 51 207;
+    --flower-800: 73 44 167;
+    --flower-900: 61 43 132;
+    --flower-950: 38 25 77;
   }
- 
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
- 
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
- 
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
- 
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
- 
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
- 
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
- 
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
- 
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
+  .dark {}
+
+  .rotate-browser {
+    /*transform:*/
+    /*rotate3d(-270, -60, -25, 45deg);*/
   }
 }
- 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
+
