--- a/src/globals.css
+++ b/src/globals.css
@@ -1,15 +1,19 @@
-/* IMPROVE FONT OPTIMIZATION */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600&display=swap');
-
 /* LENIS */
 @import "./assets/styles/lenis-requirement.css";
+
+/* FONTS */
+@import "./assets/fonts/ibm-plex-serif/fonts.css";
+@import "./assets/fonts/ibm-plex-sans/fonts.css";
+@import "./assets/fonts/ibm-plex-mono/fonts.css";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
  
 @layer base {
+
   :root {
     --primary-50: 252 253 232;
     --primary-100: 247 251 204;
