--- a/src/globals.css
+++ b/src/globals.css
@@ -11,7 +11,6 @@
 @tailwind utilities;
 
 
- 
 @layer base {
 
   :root {
@@ -64,6 +63,6 @@
     --flower-950: 38 25 77;
   }
 
-  .dark {}
+  /*.dark {}*/
 }
 
