--- a/src/globals.css
+++ b/src/globals.css
@@ -5,6 +5,8 @@
 /*@import "./assets/fonts/ibm-plex-serif/fonts.css";*/
 /*@import "./assets/fonts/ibm-plex-sans/fonts.css";*/
 /*@import "./assets/fonts/ibm-plex-mono/fonts.css";*/
+/*test*/
+
 
 @tailwind base;
 @tailwind components;
