--- a/src/assets/fonts/ibm-plex-sans/fonts.css
+++ b/src/assets/fonts/ibm-plex-sans/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", "sans-serif";
     font-style: normal;
     font-weight: 300;
     src: url("ibmplexsans-light-webfont.woff2") format('woff2'),
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", "sans-serif";
     font-style: normal;
     font-weight: 400;
     src: url("ibmplexsans-regular-webfont.woff2") format('woff2'),
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", "sans-serif";
     font-style: normal;
     font-weight: 700;
     src: url("ibmplexsans-medium-webfont.woff2") format('woff2'),
