font index html 4

--- a/src/assets/fonts/ibm-plex-serif/fonts.css
+++ b/src/assets/fonts/ibm-plex-serif/fonts.css
@@ -1,29 +1,29 @@
 @font-face {
     font-family: "Plex Sans Serif", "sans-serif";
-    font-display: block;
     font-style: normal;
     font-weight: 300;
     src: url("ibmplexserif-light-webfont.woff2") format('woff2'),
     url('ibmplexserif-light-webfont.woff') format('woff');
+    font-display: swap;
 
 }
 
 @font-face {
     font-family: "Plex Sans Serif";
-    font-display: block;
     font-style: normal;
     font-weight: 500;
     src: url("ibmplexserif-regular-webfont.woff2") format('woff2'),
     url('ibmplexserif-regular-webfont.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Plex Sans Serif", "sans-serif";
-    font-display: block;
     font-style: normal;
     font-weight: 700;
     src: url("ibmplexserif-medium-webfont.woff2") format('woff2'),
     url('ibmplexserif-medium-webfont.woff') format('woff');
+    font-display: swap;
 
 }
 
