--- a/src/assets/fonts/ibm-plex-mono/fonts.css
+++ b/src/assets/fonts/ibm-plex-mono/fonts.css
@@ -4,6 +4,7 @@
     font-weight: 300;
     src: url("ibmplexmono-light-webfont.woff2") format('woff2'),
     url('ibmplexmono-light-webfont.woff') format('woff');
+      font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     font-weight: 400;
     src: url("ibmplexmono-regular-webfont.woff2") format('woff2'),
     url('ibmplexmono-regular-webfont.woff') format('woff');
+      font-display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
     font-weight: 700;
     src: url("ibmplexmono-medium-webfont.woff2") format('woff2'),
     url('ibmplexmono-medium-webfont.woff') format('woff');
+      font-display: swap;
 }
 
 .font-plex-mono {
