--- a/src/assets/fonts/ibm-plex-sans/fonts.css
+++ b/src/assets/fonts/ibm-plex-sans/fonts.css
@@ -4,6 +4,7 @@
     font-weight: 300;
     src: url("ibmplexsans-light-webfont.woff2") format('woff2'),
     url('ibmplexsans-light-webfont.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     font-weight: 400;
     src: url("ibmplexsans-regular-webfont.woff2") format('woff2'),
     url('ibmplexsans-regular-webfont.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
     font-weight: 700;
     src: url("ibmplexsans-medium-webfont.woff2") format('woff2'),
     url('ibmplexsans-medium-webfont.woff') format('woff');
+    font-display: swap;
 }
 
 .font-plex-sans {
