--- a/src/assets/fonts/ibm-plex-sans/fonts.css
+++ b/src/assets/fonts/ibm-plex-sans/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "IBM Plex Sans", "sans-serif";
+    font-family: "IBM Plex Sans";
     font-style: normal;
     font-weight: 300;
     src: url("ibmplexsans-light-webfont.woff2") format('woff2'),
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-    font-family: "IBM Plex Sans", "sans-serif";
+    font-family: "IBM Plex Sans";
     font-style: normal;
     font-weight: 400;
     src: url("ibmplexsans-regular-webfont.woff2") format('woff2'),
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-    font-family: "IBM Plex Sans", "sans-serif";
+    font-family: "IBM Plex Sans";
     font-style: normal;
     font-weight: 700;
     src: url("ibmplexsans-medium-webfont.woff2") format('woff2'),
@@ -26,5 +26,11 @@
 }
 
 .font-plex-sans {
-    font-family: "IBM Plex Sans", "sans-serif";
+    font-family:
+            'IBM Plex Sans',
+            'BlinkMacSystemFont',
+            'Helvetica Neue',
+            '-apple-system',
+            'Arial',
+            'sans-serif';
 }
