--- a/src/assets/fonts/ibm-plex-mono/fonts.css
+++ b/src/assets/fonts/ibm-plex-mono/fonts.css
@@ -4,7 +4,7 @@
     font-weight: 300;
     src: url("ibmplexmono-light-webfont.woff2") format('woff2'),
     url('ibmplexmono-light-webfont.woff') format('woff');
-    font-display: optional;
+    font-display: fallback;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
     font-weight: 400;
     src: url("ibmplexmono-regular-webfont.woff2") format('woff2'),
     url('ibmplexmono-regular-webfont.woff') format('woff');
-    font-display: optional;
+    font-display: fallback;
 }
 
 @font-face {
@@ -22,15 +22,12 @@
     font-weight: 700;
     src: url("ibmplexmono-medium-webfont.woff2") format('woff2'),
     url('ibmplexmono-medium-webfont.woff') format('woff');
-    font-display: optional;
+    font-display: fallback;
 }
 
 .font-plex-mono {
     font-family:
             'IBM Plex Mono',
-            'Segoe UI',
-            'SfMono',
-            'Roboto',
-            '-apple-system',
-            monospace;
+            'Malayalam Sangam MN',
+            'monospace';
 }
