--- a/src/assets/fonts/ibm-plex-sans/fonts.css
+++ b/src/assets/fonts/ibm-plex-sans/fonts.css
@@ -4,7 +4,7 @@
     font-weight: 300;
     src: url("ibmplexsans-light-webfont.woff2") format('woff2'),
     url('ibmplexsans-light-webfont.woff') format('woff');
-    font-display: optional;
+    font-display: fallback;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
     font-weight: 400;
     src: url("ibmplexsans-regular-webfont.woff2") format('woff2'),
     url('ibmplexsans-regular-webfont.woff') format('woff');
-    font-display: optional;
+    font-display: fallback;
 }
 
 @font-face {
@@ -22,15 +22,12 @@
     font-weight: 700;
     src: url("ibmplexsans-medium-webfont.woff2") format('woff2'),
     url('ibmplexsans-medium-webfont.woff') format('woff');
-    font-display: optional;
+    font-display: fallback;
 }
 
 .font-plex-sans {
     font-family:
-            'IBM Plex Sans',
-            'BlinkMacSystemFont',
             'Helvetica Neue',
-            '-apple-system',
-            'Arial',
+            'IBM Plex Sans',
             'sans-serif';
 }
