font index html 10

--- a/src/globals.css
+++ b/src/globals.css
@@ -2,9 +2,9 @@
 @import "./assets/styles/lenis-requirement.css";
 
 /* FONTS */
-@import "./assets/fonts/ibm-plex-serif/fonts.css";
-@import "./assets/fonts/ibm-plex-sans/fonts.css";
-@import "./assets/fonts/ibm-plex-mono/fonts.css";
+/*@import "./assets/fonts/ibm-plex-serif/fonts.css";*/
+/*@import "./assets/fonts/ibm-plex-sans/fonts.css";*/
+/*@import "./assets/fonts/ibm-plex-mono/fonts.css";*/
 
 
 @tailwind base;
